# triton

./: .gitignore  CMakeLists.txt  LinearLayoutConversiosnTest.cpp  README.md  README_FA_PRECISION.md  RFC.md  compile_driver.py  compile_driver_full.py  failed_configs  for.mlir  high_perf.amdgcn  high_perf.llir  if.mlir  low_perf.amdgcn  low_perf.llir  matmul.mlir  mfma.cpp  mi200_output  mi200_output_triton_only  mi200_output_verify  mi300_output  mi300_output_triton_only  mi300_output_verify  myKernels.py  parse_lds.sh  peeling.py  pipeline.mlir  reproducer.mlir  test.mlir  test_kernel.py  test_moe.py
.github/workflows/: amd-offline-tests.yml
bwd_mi200/: __grp___bwd_kernel.json  _bwd_kernel.amdgcn  _bwd_kernel.hsaco  _bwd_kernel.llir
fwd_mi200/: _fwd_kernel.llir
lib/Analysis/: Allocation.cpp  Utility.cpp
lib/Conversion/TritonGPUToLLVM/ConversionTests/: CMakeLists.txt  ConvertLayoutTests.cpp  ConvertLayoutTestsLib.cpp  ConvertLayoutTestsLib.h
lib/Tools/: LinearLayout.cpp
mi200_irs/bwd/: _bwd_kernel.json  _bwd_kernel.ttgir
mi200_irs/fwd/: __grp___fwd_kernel.json  _fwd_kernel.amdgcn  _fwd_kernel.hsaco  _fwd_kernel.json  _fwd_kernel.ttgir  _fwd_kernel.ttir
mi200_irs/preprocess/: __grp___bwd_preprocess.json  _bwd_preprocess.hsaco  _bwd_preprocess.json  _bwd_preprocess.llir  (+1 more)
preprocess_mi200/: _bwd_preprocess.amdgcn  _bwd_preprocess.ttir
python/: 06-attention-decode.py  _attn_fwd.ttgir  matmul.py  mfma16.mlir  mfma4.mlir  simplified_fa.py  test_exp.py  test_exp_precision.py  test_gemm.mlir  tritonProfiler.sh  viewer.py
warp_specialization/: mm.cpp
(+163 files in other folders)
